--- a/README
+++ b/README
@@ -1,7 +1,50 @@
-## Deploy da Function
+# Professional Cloud DevOps Engineer
+
+## Material de apoio para o estudo da certificação DevOps do GCP
+
+### MindMap para a Prova
+https://mm.tt/app/map/3259533077?t=mMHqVEIPSV
+
+### Idéia da aplicação
+https://drive.google.com/file/d/1Fb5u4zNI5Ts04iMzpX759BPXD51rlO0N/view?usp=sharing
+
+
+## Inicialização e Configurações
+
+### Instalação do SDK do Google Cloud
+ https://cloud.google.com/sdk/docs/install
+
+### Inicialização do SDK
+gcloud init
+
+### Configuração do projeto
+gcloud config list
+gcloud config set project <PROJECT_ID>
+gcloud config set compute/region us-central1
+
+## Criando a primeira Function
+
+### Deploy da Function
 chmod +x deploy.sh
 ./deploy.sh
 
-## Testando a Function
+### Testando a Function
 gcloud functions call helloGET
 
+### Excluindo a function
+gcloud functions list
+gcloud functions delete helloGET --region us-central1
+
+
+## Criando Build automatizado
+
+## Criacao do trigger
+gcloud builds triggers create hello-cloud-source-repositories \
+    --repo=schola \
+    --branch-pattern=master \
+    --build-config=cloudbuild.yaml \
+    --events push
+    --service-account=SERVICE_ACCOUNT
+
+### Excluindo o trigger
+gcloud builds triggers delete TRIGGER_NAME
